# embedded-voice-kkutu

./: .gitignore  .gitmodules  README.md  convert.py  pyproject.toml
.github/workflows/: python-app.yml
models/: .gitignore  README.md
src/embedded_voice_kkutu/: __init__.py  runner.py
src/embedded_voice_kkutu/models/: audio_handler.py
src/embedded_voice_kkutu/models/io/: __init__.py  io_threading.py  record_handler.py  record_handler_sounddevice.py
src/embedded_voice_kkutu/models/ko_kr/: __init__.py  support.py
src/embedded_voice_kkutu/models/stt/: __init__.py  stt_handler.py
src/embedded_voice_kkutu/models/tts/: __init__.py  tts_handler.py
src/embedded_voice_kkutu/service/: game_service.py  playGame.py
src/embedded_voice_kkutu/voice/: __init__.py  in_stt.py  out.py
src/embedded_voice_kkutu_utils/: __init__.py  clean.py  convert.py
src/whisper_ctranslate2/: README  __init__.py  config.py  invoker.py  transcribe.py  utils.py
src/whisper_ctranslate2_utils/: __init__.py  convert.py
tests/models/: test_io.py  test_ko_kr.py  test_record_handler.py  test_stt_handler.py  test_tts_handler.py
