[project]
name = "embedded-voice-kkutu"
version = "0.1.0"
description = "Voice KKuTu: Play with voice!"
authors = [
    { name = "Jonghyeon Park", email = "belline0124@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
app = "embedded_voice_kkutu:hello"
convert = "embedded_voice_kkutu_utils:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/embedded_voice_kkutu"]
