[project]
name = "embedded-voice-kkutu"
version = "0.1.0"
description = "Voice KKuTu: Play with voice!"
authors = [
    { name = "Jonghyeon Park", email = "belline0124@gmail.com" }
]
dependencies = [
    "gtts>=2.5.4",
    "pydub>=0.25.1",
    "speechrecognition>=3.11.0",
    "pyaudio>=0.2.14",
    "black>=24.10.0",
    "pre-commit>=4.0.1",
    "noisereduce>=3.0.3",
    "vosk>=0.3.45",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
app = "embedded_voice_kkutu:hello"
convert = "embedded_voice_kkutu_utils:convert"
clean = "embedded_voice_kkutu_utils:clean"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.4",
]

[tool.rye.scripts]
pre-commit = "rye run pre-commit install"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/embedded_voice_kkutu"]
